--- a/oasp4j-parent/pom.xml
+++ b/oasp4j-parent/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>io.oasp.java</groupId>
     <artifactId>oasp4j-dependencies</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-BOOT-SNAPSHOT</version>
   </parent>
   <artifactId>oasp4j-parent</artifactId>
-  <version>dev-SNAPSHOT</version> <!-- This POM will never be released -->
+  <version>1.0.0-BOOT-SNAPSHOT</version> <!-- This POM will never be released -->
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Modules of the Open Application Standard Platform for Java (OASP4J).</description>
