#137: fixes to work in eclipse again

--- a/oasp4j-samples/oasp4j-sample-server/src/main/webapp/WEB-INF/web.xml
+++ b/oasp4j-samples/oasp4j-sample-server/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
   <context-param>
     <param-name>webAppRootKey</param-name>
     <!-- <param-value>restaurant</param-value> -->
-    <param-value>oasp-example-application</param-value>
+    <param-value>oasp-sample-server</param-value>
   </context-param>
 
   <!-- Bootstrap Listener to start the Spring Main-WebApplicationContexts of Spring. Delegates to the ContextLoader.
