--- a/oasp4j-samples/oasp4j-sample-core/src/test/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/test/resources/config/env/application.properties
@@ -12,6 +12,5 @@
 #
 database.user.login = sa
 database.user.password =
-#database.url = jdbc:h2:target/.sample;INIT=create schema if not exists public
-database.url = jdbc:h2:tcp://localhost:8043/target/.sample;INIT=create schema if not exists public
+database.url = jdbc:h2:target/.sample;INIT=create schema if not exists public
 database.migration.auto = true
