--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <!--
   <parent>
     <groupId>io.oasp.java</groupId>
     <artifactId>oasp4j</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
+  -->
   <groupId>io.oasp.java</groupId>
   <artifactId>oasp4j-bom</artifactId>
-  <version>${oasp4j.version}</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Dependencies (BOM) of the Open Application Standard Platform for Java (OASP4J) based on spring boot.</description>
