#140: workaround (added deploymentManagement/site redundantly - sometimes Maven is just ridiculous)

--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -243,5 +243,9 @@
       <name>OASP Snapshots</name>
       <url>http://oasp-ci.cloudapp.net/nexus/content/repositories/snapshots/</url>
     </snapshotRepository>
+    <site>
+      <id>oasp-site</id>
+      <url>file://${user.dir}/target/oasp4j/maven</url>
+    </site>
   </distributionManagement> 
 </project>
