#87: aggregate javadoc only for modules (do not mix with sample)

--- a/oasp4j-modules/pom.xml
+++ b/oasp4j-modules/pom.xml
@@ -47,5 +47,43 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
   </dependencies>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <!--<notree>true</notree>-->
+          <show>private</show>
+          <encoding>${project.reporting.outputEncoding}</encoding>
+          <charset>${project.build.sourceEncoding}</charset>
+          <docfilessubdirs>true</docfilessubdirs>
+          <stylesheetfile>${user.dir}/src/main/javadoc/stylesheet.css</stylesheetfile>
+          <!--<additionalparam>-Xdoclint:none -source ${java.version}</additionalparam>-->
+          <links>
+            <link>http://docs.oracle.com/javase/7/docs/api/</link>
+            <link>http://oasp.github.io/oasp4j/maven/apidocs/</link>
+          </links>
+          <doctitle>JavaDocs for ${project.name}</doctitle>
+          <windowtitle>JavaDocs for ${project.name}</windowtitle>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <id>oasp.javadoc</id>
+            <reports>
+              <report>javadoc</report>
+            </reports>
+          </reportSet>
+          <reportSet>
+            <id>oasp.javadoc.aggregate</id>
+            <reports>
+              <report>aggregate</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+    </plugins>
+  </reporting>
   
 </project>
