oasp/oasp4j#135: support for web sockets initially added

--- a/oasp4j-samples/oasp4j-sample-core/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-core/pom.xml
@@ -183,6 +183,18 @@
       <artifactId>moneta</artifactId>
       </dependency>
     -->
+
+    <!-- Web Sockets -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-websocket</artifactId>
+      <version>4.0.8.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-messaging</artifactId>
+      <version>4.0.8.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
