--- a/oasp4j-templates/oasp4j-template-server/pom.xml
+++ b/oasp4j-templates/oasp4j-template-server/pom.xml
@@ -14,6 +14,7 @@
   <description>Application template for the server of the Open Application Standard Platform for Java (OASP4J).</description>
 
   <properties>
+    <template.input>${basedir}/src/main/templates/archetype-resources</template.input>
     <sample.package>io.oasp.gastronomy.restaurant</sample.package>
     <sample.package.path>io/oasp/gastronomy/restaurant</sample.package.path>
     <sample.input>../../oasp4j-samples</sample.input>
@@ -49,7 +50,7 @@
 				<artifactId>maven-archetype-plugin</artifactId>
 				<version>2.2</version>
 			</plugin>
-	
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
