--- a/oasp4j-templates/oasp4j-template-server/src/main/templates/archetype-resources/pom.xml
+++ b/oasp4j-templates/oasp4j-template-server/src/main/templates/archetype-resources/pom.xml
@@ -20,7 +20,7 @@
       <dependency>
         <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-bom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${oasp4j.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
