--- a/oasp4j-templates/oasp4j-template-server/src/main/templates/archetype-resources/pom.xml
+++ b/oasp4j-templates/oasp4j-template-server/src/main/templates/archetype-resources/pom.xml
@@ -14,6 +14,10 @@
     <!--<module>${artifactId}-server-integration</module>-->
   </modules>
 
+  <properties>
+    <port.range>82</port.range>
+  </properties>
+
   <dependencyManagement>
     <dependencies>
       <!-- BOM of OASP4J -->
