--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <oasp4j.version>1.0.0-SNAPSHOT</oasp4j.version>
+    <port.range>81</port.range>
   </properties>
 
   <build>
@@ -311,7 +312,7 @@
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <configuration>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-        </configuration>        
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -444,16 +445,16 @@
       </build>
     </profile>
   </profiles>
-  
+
   <issueManagement>
     <system>GitHub</system>
     <url>https://github.com/oasp/oasp4j/issues</url>
   </issueManagement>
-  
+
   <scm>
     <url>https://github.com/oasp/oasp4j/tree/master</url>
   </scm>
-  
+
   <!--
     <mailingLists>
     <mailingList>
@@ -469,7 +470,7 @@
     <name>OASP-Team</name>
     <url>http://oasp.io/oasp4j/maven/team-list.html</url>
   </organization>
-  
+
   <developers>
     <developer>
       <id>hohwille</id>
@@ -486,7 +487,7 @@
       <properties/>
     </developer>
   </developers>
-  
+
   <licenses>
     <license>
       <name>Apache Software Licenese</name>
@@ -495,7 +496,7 @@
       <comments/>
     </license>
   </licenses>
-  
+
   <distributionManagement>
     <repository>
       <id>oasp.releases</id>
@@ -512,5 +513,5 @@
       <url>file://${user.dir}/target/oasp4j/maven</url>
     </site>
   </distributionManagement>
-  
+
 </project>
