--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
@@ -11,7 +11,7 @@ database.datasource = org.h2.jdbcx.JdbcDataSource
 database.hibernate.hbm2ddl.auto = validate
 database.hibernate.show.sql = false
 # Port for internal H2 Database
-database.h2.server.port = 8043
+database.h2.server.port = ${port.range}43
 database.migration.auto = true
 
 # Activate spring profiles
