--- a/oasp4j-samples/oasp4j-sample-server-integration/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-server-integration/pom.xml
@@ -55,6 +55,18 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
     <plugins>
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
@@ -70,15 +82,15 @@
           <configuration>
             <type>standalone</type>
             <properties>
-              <cargo.servlet.port>8081</cargo.servlet.port>
+              <cargo.servlet.port>${port.range}81</cargo.servlet.port>
             </properties>
             <configfiles>
               <configfile>
-                <file>${project.basedir}/src/test/resources/config/tomcat/tomcat-users.xml</file>
+                <file>${project.build.testOutputDirectory}/config/tomcat/tomcat-users.xml</file>
                 <todir>conf</todir>
               </configfile>
               <configfile>
-                <file>${project.basedir}/src/test/resources/config/env/application.properties</file>
+                <file>${project.build.testOutputDirectory}/config/env/application.properties</file>
                 <todir>shared/classes/config/env</todir>
               </configfile>
             </configfiles>
