--- a/oasp4j-samples/oasp4j-sample-server-integration/src/test/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-server-integration/src/test/resources/config/env/application.properties
@@ -12,7 +12,7 @@ database.hibernate.dialect = org.hibernate.dialect.H2Dialect
 database.datasource = org.h2.jdbcx.JdbcDataSource
 database.hibernate.hbm2ddl.auto = create
 #database.url = jdbc:h2:~/restaurant-db;INIT=create schema if not exists public
-database.url = jdbc:h2:tcp://localhost:8043/restaurant-db;INIT=create schema if not exists public
+database.url = jdbc:h2:tcp://localhost:${port.range}43/restaurant-db;INIT=create schema if not exists public
 
 database.user.login = sa
 database.user.password =
