--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -23,6 +23,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <cxf.version>3.0.3</cxf.version>
     <spring.version>4.0.8.RELEASE</spring.version>
+    <oasp.gpg.keyname>joerg.hohwiller@capgemini.com</oasp.gpg.keyname>
   </properties>
 
   <dependencyManagement>
@@ -195,37 +196,37 @@
       
       <!-- *** INTERNAL DEPENDENCIES *** -->
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-logging</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-beanmapping</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-configuration</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-security</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-rest</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-jpa</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-web</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -248,4 +249,80 @@
       <url>file://${user.dir}/target/oasp4j/maven</url>
     </site>
   </distributionManagement> 
+  
+  <profiles>
+    <profile>
+      <id>deploy</id>
+      <build>
+        <plugins>
+          <!-- http://mojo.codehaus.org/flatten-maven-plugin/ -->
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>flatten-maven-plugin</artifactId>
+            <version>1.0.0-beta-3</version>
+            <configuration>
+              <flattenMode>oss</flattenMode>
+            </configuration>
+            <executions>
+              <execution>
+                <id>flatten</id>
+                <phase>process-test-resources</phase>
+                <goals>
+                  <goal>flatten</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>flatten.clean</id>
+                <phase>clean</phase>
+                <goals>
+                  <goal>clean</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- also generate javadoc JARs -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- Sign artifacts with PGP -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <configuration>
+            	<keyname>${oasp.gpg.keyname}</keyname>
+            </configuration>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+      <distributionManagement>
+        <snapshotRepository>
+          <id>ossrh</id>
+          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+          <id>ossrh</id>
+          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+  </profiles>
+  
 </project>
