--- a/oasp4j-modules/oasp4j-security/pom.xml
+++ b/oasp4j-modules/oasp4j-security/pom.xml
@@ -3,10 +3,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.oasp.java</groupId>
+    <groupId>io.oasp.java.dev</groupId>
     <artifactId>oasp4j-modules</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
+  <groupId>io.oasp.java.modules</groupId>
   <artifactId>oasp4j-security</artifactId>
   <version>${oasp4j.version}</version>
   <packaging>jar</packaging>
@@ -60,7 +61,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>io.oasp.java</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>oasp4j-logging</artifactId>
       <scope>test</scope>
     </dependency>
