--- a/oasp4j-modules/pom.xml
+++ b/oasp4j-modules/pom.xml
@@ -3,7 +3,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.oasp.java</groupId>
+    <groupId>io.oasp.java.dev</groupId>
     <artifactId>oasp4j</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
@@ -27,7 +27,7 @@
     <dependencies>
       <!-- BOM of OASP4J -->
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.oasp.java</groupId>
         <artifactId>oasp4j-bom</artifactId>
         <version>${oasp4j.version}</version>
         <type>pom</type>
