--- a/oasp4j-modules/oasp4j-security/pom.xml
+++ b/oasp4j-modules/oasp4j-security/pom.xml
@@ -66,6 +66,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>oasp4j-testconfig</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <scope>test</scope>
