--- a/oasp4j-modules/oasp4j-logging/pom.xml
+++ b/oasp4j-modules/oasp4j-logging/pom.xml
@@ -37,6 +37,10 @@
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.janino</groupId>
+      <artifactId>janino</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
