--- a/oasp4j-samples/oasp4j-sample-server/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-server/pom.xml
@@ -21,6 +21,15 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+  </build>
+
   <!-- Overlays for JavaScript client -->
   <profiles>
     <profile>
